# cactus

./: .gitignore  .gitmodules  ACTIVATION_COMPARISON_FINAL.md  BFCL_100_PERCENT_COMPLETE.md  CLAUDE.md  README.md  benchmark_onnx.py  build_test_moonshine.sh  cactus-cli  cactus-cli.bat  cli.diff  compare_encoder.py  comparison_no_file.txt  comparison_report.txt  comparison_report_2.txt  config_utils.diff  converter_llm.diff  decisions_made.txt  detailed_layer_outputs.txt  diff.diff  graph.json  graph_summary (1).txt  graph_summary.txt  implement_ops.txt  layer_outputs.txt  lfm2_vlm_state_dict.txt  link_and_test.sh  reference_output.txt  run_debug.sh  test_tokenization.cpp  test_tokenization_sp.cpp  verify_weights.py  weight_patterns.diff  yolo_nano_ops.txt  yolov11.onnx  yolov11.onnx.data  yolov11_shaped_ops.txt
android/: CMakeLists.txt  build.bat
apple/: build.bat
cactus/: CMakeLists.txt  build.bat  build_output.txt  final_hidden.txt  profile.txt
cactus/engine/: engine.h  engine_bpe.cpp  engine_cache.cpp  engine_image.cpp  (+7 more)
cli/: build_chat.sh  cactus  cactus.bat
docs/: cactus_engine.md
gemma_tool_use/: .gitignore  PLAN.md  README.md
pebble_qwen/: hparam_config.json  hparam_results.json  hparam_search.py  hparam_search_results.json  qwen_utils.py  results_summary.csv  train_qwen3_tool_calling.py
pebble_qwen_unsloth/: Qwen3_0.6B_Alpaca.ipynb  README.md  requirements.txt  train_qwen3_colab.ipynb  train_qwen3_tool_calling.py
temp_tools/: cli.py  converter_llm.py
tests/: ACTIVATION_COMPARISON_RESULTS.txt  CMakeLists.txt  asr.cpp  benchmark_retrieval.py  chat.cpp  decoder_emb_pos_ref.npy  decoder_post_norm_ref.npy  divergence_analysis.md  dump_encoder.py  logits_ref.npy  nomic_activation_inspection.ipynb  run.bat  run.sh  run_nomic.sh  run_onnx.sh  run_siglip2_test.sh  run_until_error.sh  siglip2_debug_runner.cpp  siglip2_output_cpp_istock.txt  siglip2_output_cpp_istockphoto-184978580-2048x2048.jpg.txt  siglip2_output_cpp_test_synthetic.png.txt  siglip2_output_python_banner.jpg.txt  siglip2_output_python_istock.txt  siglip2_python_debug.txt  test_curl.cpp  test_engine.cpp  test_gemma_bfcl.cpp  test_graph.cpp  test_kernel.cpp  test_lfm2_preprocessor.cpp  test_lfm2vl_model.cpp  test_model_nomic.cpp  test_monkey_preprocess.cpp  test_moonshine.cpp  test_nomic_model.cpp  test_parser_bfcl.cpp  test_performance.cpp  test_profile_transcription.cpp  test_siglip2_model.cpp  test_siglip2_preprocessor.cpp  (+6 more)
tests/android/: CMakeLists.txt
tests/cactus_dwconv/: CMakeLists.txt  test_depthwise_causal.cpp
tests/cactus_dwconv/fixtures/: shapes.txt
tests/cactus_slice/: CMakeLists.txt  test_slice.cpp
tests/cactus_slice/slice_fixtures_identity/2d_axis0_start2/: meta.txt
tests/cactus_slice/slice_fixtures_identity/2d_axis1_start1/: meta.txt
tests/cactus_slice/slice_fixtures_identity/3d_axis0_start1/: meta.txt
tests/cactus_slice/slice_fixtures_identity/3d_axis1_start2/: meta.txt
tests/cactus_slice/slice_fixtures_identity/3d_axis2_start2/: meta.txt
tests/cactus_slice/slice_fixtures_multi/2d_axis0_start2/: meta.txt
tests/cactus_slice/slice_fixtures_multi/2d_axis1_start1/: meta.txt
tests/cactus_slice/slice_fixtures_multi/3d_axis0_start1/: meta.txt
tests/cactus_slice/slice_fixtures_multi/3d_axis1_start2/: meta.txt
tests/cactus_slice/slice_fixtures_multi/3d_axis2_start2/: meta.txt
tools/: CMakeLists.txt  README.md  analyze_attn_diff.py  analyze_profile.py  benchmark_onnx.cpp  benchmark_onnx.sh  build.sh  chat.cpp  check_embedding_shape.py  compare_lfm2_layer0_suite.py  compare_moonshine_dumps.py  compare_siglip2_layer.py  convert_hf copy.py  convert_hf.py  convert_onnx.py  debug_runner.cpp  dump_hf_moonshine.py  dump_lfm2_vision.py  dump_siglip2_layer0.py  evals_setup.sh  generate_cactus_diffs.sh  inspect_hf_moonshine.py  inspect_weights.py  log_lfm2vl_vision.py  lora_gemma.ipynb  profile.txt  profile16.txt  profile_16.txt  profile_32.txt  profile_8.txt  requirements.txt  run_onnx.py  setup-dco.bat  text_evals.py  whisper_eval.py
tools/src/: cactus_ffi.py  cli.py  config_utils.py  converter_llm.py  weight_patterns.py
tools/text-evals/: ppl_wikitext_v1.txt
tuning/: README.md  dpo_gemma.ipynb  grpo_gemma.ipynb  lora_gemma.ipynb  unsloth_lora_qwen3.ipynb
tunix/: .gitignore
(+132 files in other folders)
